--- a/style.css
+++ b/style.css
@@ -230,7 +230,16 @@ footer {
     margin: 25px 0;
     color: #4b2a6b;
 }
-
+#bg-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    filter: brightness(0.4);
+}
 
 /* RESPONSIVE — MOBILE STYLE */
 @media (max-width: 768px) {
@@ -300,4 +309,5 @@ footer {
     #projects-grid {
         grid-template-columns: repeat(3, 1fr);
     }
+    
 }
